# DTEAM-django-practical-test

./: .env.example  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
CVProject/: celery.py  context_processors.py  settings.py  urls.py
audit/: middleware.py  models.py  urls.py  views.py
audit/migrations/: 0001_initial.py  0002_requestlog_content_type_requestlog_encoding_and_more.py
audit/tests/: test_basic_logging.py
main/: tasks.py  urls.py  views.py
main/api/: serializers.py  urls.py  views.py
main/fixtures/: cv_sample_data.json
main/migrations/: 0001_initial.py
main/models/: __init__.py  contact.py  cv.py  project.py  skill.py
main/tests/: test_cv_detail_view.py  test_cv_list_view.py
main/tests/test_api/: test_cv.py  test_cv_contact.py  test_cv_project.py  test_cv_skills.py
scripts/: entrypoint.sh  prestart.sh
templates/: base.html  settings.html
templates/audit/: list_request_log.html
templates/main/: cv_detail.html  cv_list.html  cv_pdf.html
