[project]
name = "cvproject"
version = "0.1.0"
description = "DTEAM - Django Developer Practical Test"
authors = [
    {name = "Shams",email = "shamsulloismatov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==4.2.10)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "drf-nested-routers (>=0.94.1,<0.95.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.10.0"
